# zenzei

./: .gitignore  LICENSE-CODE  LICENSE-MODEL  Makefile  README.md  pyproject.toml
configs/model/: zensei_16B.json  zensei_236B.json  zensei_671B.json
configs/tokenizer/: tokenizer_train.yaml
configs/training/: lora_finetune.yaml  pretrain_stage1.yaml  pretrain_stage2.yaml
docker/: Dockerfile.serve  Dockerfile.train
scripts/: download_wiki.py  prepare_data_colab.py  prepare_data_qwen_colab.py  run_data_pipeline.sh  run_data_pipeline_colab.py  run_eval.sh  run_pretrain.sh  run_server.sh  run_tokenizer_train.sh  save_to_drive.py  smoke_test.py  test_generate_colab.py  train_qwen_colab.py  train_tokenizer_colab.py  web_ui.py
tests/: test_data_pipeline.py  test_eval.py  test_model_load.py  test_tokenizer.py
zensei/data/: clean.py  dedup.py  download.py  filter.py  mix.py  prepare.py
zensei/eval/: jaquad.py  jglue.py  mmlu_ja.py  perplexity.py  run_eval.py  tokenizer_eval.py
zensei/model/: convert.py  kernel.py  model.py
zensei/serving/: api_server.py  chat_template.py  generate.py
zensei/tokenizer/: merge_tokenizer.py  test_tokenizer.py  train_tokenizer.py
zensei/training/: checkpoint.py  embed_resize.py  lora.py  lr_schedule.py  pretrain.py  trainer.py
